name: ledger
version: 0.1.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2014 Taylor Fausak <taylor@fausak.me>
maintainer: Taylor Fausak <taylor@fausak.me>
homepage: https://github.com/tfausak/ledger
bug-reports: https://github.com/tfausak/ledger/issues
synopsis: TODO
description:
    TODO
category: Web
author: Taylor Fausak <taylor@fausak.me>
tested-with: GHC ==7.8.*
data-files:
    ledger.cfg
    ledger.html
    ledger.css
    ledger.jsx
    ledger.manifest
    static/apple-touch-icon-precomposed-57.png
    static/apple-touch-icon-precomposed-57@2x.png
    static/apple-touch-icon-precomposed-60@3x.png
    static/apple-touch-icon-precomposed-72.png
    static/apple-touch-icon-precomposed-72@2x.png
    static/apple-touch-icon-precomposed-76.png
    static/apple-touch-icon-precomposed-76@2x.png
    static/apple-touch-startup-image-320x460.png
    static/apple-touch-startup-image-320x460@2x.png
    static/apple-touch-startup-image-320x548@2x.png
    static/apple-touch-startup-image-375x647@2x.png
    static/apple-touch-startup-image-394x736@3x.png
    static/apple-touch-startup-image-414x716@3x.png
    static/apple-touch-startup-image-748x1024.png
    static/apple-touch-startup-image-748x1024@2x.png
    static/apple-touch-startup-image-768x1004.png
    static/apple-touch-startup-image-768x1004@2x.png
    static/favicon.ico
    vendor/JSXTransformer-0.12.0.js
    vendor/react-0.12.0.js
    vendor/superagent-0.20.0.js
data-dir: data
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
 
source-repository head
    type: git
    location: git://github.com/tfausak/ledger.git
 
library
    build-depends:
        base ==4.*,
        Cabal >=1.10,
        acid-state ==0.12.*,
        aeson ==0.8.*,
        bytestring ==0.10.*,
        configurator ==0.3.*,
        containers ==0.5.*,
        http-types ==0.8.*,
        mtl ==2.*,
        network ==2.*,
        safecopy ==0.8.*,
        text ==1.*,
        time ==1.*,
        transformers ==0.3.*,
        wai ==3.*,
        wai-extra ==3.*,
        warp ==3.*
    exposed-modules:
        Ledger
        Ledger.Actions
        Ledger.Actions.Common
        Ledger.Actions.Entries
        Ledger.Application
        Ledger.Main
        Ledger.Models.Entry
        Ledger.Models.Entry.Request
        Ledger.Models.Entry.Response
        Ledger.Router
        Ledger.State
        Ledger.Utilities
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: library
    other-modules:
        Paths_ledger
    ghc-options: -Wall
 
executable ledger
    build-depends:
        base -any,
        ledger -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: executable
 
 