name: ledger
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2014 Taylor Fausak <taylor@fausak.me>
maintainer: Taylor Fausak <taylor@fausak.me>
homepage: https://github.com/tfausak/ledger
bug-reports: https://github.com/tfausak/ledger/issues
synopsis: Watch your money fly away.
description:
    https://github.com/tfausak/ledger#readme
category: Web
author: Taylor Fausak <taylor@fausak.me>
tested-with: GHC ==7.8.*
data-files:
    ledger.cfg
data-dir: data
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
 
source-repository head
    type: git
    location: git://github.com/tfausak/ledger.git
 
library
    build-depends:
        base ==4.*,
        acid-state ==0.12.*,
        aeson ==0.8.*,
        bytestring ==0.10.*,
        configurator ==0.3.*,
        containers ==0.5.*,
        filepath ==1.*,
        http-types ==0.8.*,
        ixset ==1.*,
        mtl ==2.*,
        network ==2.*,
        random ==1.*,
        safecopy ==0.8.*,
        text ==1.*,
        time ==1.*,
        transformers ==0.3.*,
        wai ==3.*,
        wai-cors ==0.2.*,
        wai-extra ==3.*,
        warp ==3.*
    exposed-modules:
        Ledger
        Ledger.Application
        Ledger.Application.Action
        Ledger.Application.Action.Common
        Ledger.Application.Action.Entries
        Ledger.Application.Action.Internal
        Ledger.Application.Action.Keys
        Ledger.Application.Action.Root
        Ledger.Application.Application
        Ledger.Application.Middleware
        Ledger.Application.Model
        Ledger.Application.Model.Entry
        Ledger.Application.Model.Key
        Ledger.Application.Router
        Ledger.Application.State
        Ledger.Application.State.Internal
        Ledger.Application.Transformer
        Ledger.Application.Transformer.EntryInput
        Ledger.Application.Transformer.EntryOutput
        Ledger.Application.Transformer.KeyOutput
        Ledger.Config
        Ledger.Main
        Ledger.Settings
        Ledger.State
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: library
    other-modules:
        Paths_ledger
    ghc-options: -Wall
 
executable server
    build-depends:
        base -any,
        ledger -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: executable
 
test-suite main
    build-depends:
        base -any,
        ledger -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror
test-suite hlint
    build-depends:
        base -any,
        hlint ==1.9.*
    type: exitcode-stdio-1.0
    main-is: HLint.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test-suite
 